ASOC-46963-minor-bug-fix (#2088)
* ASOC-46963-minor-big-fixes

1. Adding a panel for 'add button'
2. Custom style to remove scrollbar when zoomed in.
3. Adding title attribute to display entire channel
4. Remove the res-form-label class

* review-feedback-tooltip

1. Adding a computed property for the panelId

--- a/packager/app/styles/packager/fields.scss
+++ b/packager/app/styles/packager/fields.scss
@@ -39,6 +39,7 @@
       padding: rsa-whitespace(less) rsa-whitespace();
       border: 1px solid #FFFFFF;
       color: #FFFFFF;
+      white-space: nowrap;
     }
     .icon-align-left {
       text-align: left;
@@ -69,6 +70,7 @@
     }
     .ember-power-select-status-icon{
       height: 100%;
+      overflow: hidden;
     }
     .load-error-message {
       position: fixed;
